# wscpp

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: CMakeLists.txt
include/wscpp/: connection.hpp  logging.hpp
include/wscpp/http/: constants.hpp  exception.hpp  header.hpp  response.hpp  status_code.hpp
include/wscpp/protocol/: close_status_codes.hpp  converters.hpp  error.hpp  frame.hpp  header.hpp  payload.hpp
